fix(report): Fix typo in file path at the report creation
